[gd_scene load_steps=11 format=3 uid="uid://cnqsuyouetc2o"]

[ext_resource type="Script" path="res://DroneB.gd" id="1_6gg65"]
[ext_resource type="Texture2D" uid="uid://daie5uei7e4lm" path="res://assests/Drone F1.png" id="2_1xlo8"]
[ext_resource type="Texture2D" uid="uid://bpw4pw0aha41r" path="res://assests/Drone F2.png" id="3_421pl"]
[ext_resource type="Texture2D" uid="uid://bxr6a87k14s4h" path="res://assests/Drone F3.png" id="4_mseqv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_r28yn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1xlo8")
}, {
"duration": 1.0,
"texture": ExtResource("3_421pl")
}, {
"duration": 1.0,
"texture": ExtResource("4_mseqv")
}],
"loop": true,
"name": &"Flying",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1xlo8")
}],
"loop": true,
"name": &"Stunned",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rcvom"]
size = Vector2(88, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uoq6"]
size = Vector2(499.75, 253.375)

[sub_resource type="Animation" id="Animation_ngmj1"]
resource_name = "Flying"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Flying"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_6go5i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Flying"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r725b"]
_data = {
"Flying": SubResource("Animation_ngmj1"),
"RESET": SubResource("Animation_6go5i")
}

[node name="DroneB" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(4, 4)
script = ExtResource("1_6gg65")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3.8147e-06, -0.999996)
scale = Vector2(0.098, 0.034)
sprite_frames = SubResource("SpriteFrames_r28yn")
animation = &"Flying"
autoplay = "Flying"
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_rcvom")
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0.5, 31.3125)
shape = SubResource("RectangleShape2D_3uoq6")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, 15)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r725b")
}

[node name="stunTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="stunTimer" to="." method="_on_stun_timer_timeout"]
